--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Created by https://www.toptal.com/developers/gitignore/api/react,node,nextjs
-# Edit at https://www.toptal.com/developers/gitignore?templates=react,node,nextjs
-
 ### NextJS ###
 # dependencies
 /node_modules
@@ -185,4 +182,5 @@ psd
 thumb
 sketch
 
-# End of https://www.toptal.com/developers/gitignore/api/react,node,nextjs
+### Postgres ###
+data
